DirectoryTypeの実装を追加。 階層が親のリソースを探しaddする実装を追加。 JarArchiveTypeの場合、自身の内部要素を追加する実装を追加。